<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sports.courtcounter.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.sports.courtcounter.MainActivity"
            android:orientation="vertical">

            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a_label_text"
                    android:id="@+id/team_a_label"
                    android:textSize="32sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a_score_text"
                    android:id="@+id/team_a_score"
                    android:textSize="120sp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_1pt_lbl"
                    android:id="@+id/team_a_1pt_btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_2pt_lbl"
                    android:id="@+id/team_a_2pt_btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_3pt_lbl"
                    android:id="@+id/team_a_3pt_btn" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/team_b_label_text"
                    android:id="@+id/team_b_label"
                    android:textSize="32sp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/team_b_score_text"
                    android:id="@+id/team_b_score"
                    android:textSize="120sp"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_1pt_lbl"
                    android:id="@+id/team_b_1pt_btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_2pt_lbl"
                    android:id="@+id/team_b_2pt_btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_3pt_lbl"
                    android:id="@+id/team_b_3pt_btn" />

            </LinearLayout>
        </LinearLayout>

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset_text"
            android:id="@+id/reset_btn" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
